Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora exercitationem explicabo mollitia iusto placeat? Voluptates, earum? Hic veritatis, nostrum quidem cumque dolorem autem recusandae minima aliquid beatae, aspernatur praesentium sint?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam fugit iste aspernatur tempore commodi officia nostrum iure vero deserunt sit neque facilis, reiciendis tempora porro ex earum. Sunt, soluta cum.</p>
 </body>
 </html>
